--- a/k64-dir/react_app/src/index.css
+++ b/k64-dir/react_app/src/index.css
@@ -1,3 +1,11 @@
+:root {
+    --bg-green: rgb(19, 83, 75);
+}
 body {
-    margin: 0
+    margin: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+img {
+    display: block;
+    width: 100%;
 }
