--- a/k64-dir/react_app/src/index.css
+++ b/k64-dir/react_app/src/index.css
@@ -4,6 +4,7 @@
 body {
     margin: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    overflow-y: scroll;
 }
 img {
     display: block;
