--- a/k64-dir/react_app/src/components/Layout.css
+++ b/k64-dir/react_app/src/components/Layout.css
@@ -1,7 +1,5 @@
 .k-grid {
     display: grid; 
-    grid-template-columns: 1fr minmax(auto, 1100px) 1fr;
-    column-gap: 20px;
 }
 .k-grid--center {
     grid-column-start: 2;
@@ -9,11 +7,16 @@
 
 @media screen and (max-width: 640px) {
     .k-grid {
-        column-gap: 10px;
+        grid-template-columns: 10px calc(100% - 20px) 10px;
     }
 }
 
 @media screen and (min-width: 641px) {
+    .k-grid {
+        display: grid; 
+        grid-template-columns: 1fr minmax(auto, 1100px) 1fr;
+        column-gap: 20px;
+    }
     main {
         min-height: calc(100vh - 200px);
     }
