world cloud + some CSS reorg

--- a/k64-dir/react_app/src/components/elements/Footer/Footer.css
+++ b/k64-dir/react_app/src/components/elements/Footer/Footer.css
@@ -3,6 +3,6 @@ footer {
 }
 @media screen and (min-width: 641px) {
     footer {
-        min-height: 100px;
+        min-height: var(--footer-min_height);
     }
 }
