--- a/k64-dir/react_app/src/components/Layout.css
+++ b/k64-dir/react_app/src/components/Layout.css
@@ -18,6 +18,6 @@
         column-gap: 20px;
     }
     main {
-        min-height: calc(100vh - 200px);
+        min-height: calc(100vh - (var(--header-min_height) + var(--footer-min_height)));
     }
 }
