--- a/k64-dir/react_app/src/components/elements/Header/Header.css
+++ b/k64-dir/react_app/src/components/elements/Header/Header.css
@@ -1,5 +1,5 @@
 header {
-    min-height: 100px;
+    min-height: var(--header-min_height);
     background-color: var(--bg-green);
 }
 .header-inner {
